# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Source/: Constants.h  Converter.cpp  Converter.h  Engine.cpp  Engine.h  FileHandler.cpp  FileHandler.h  RayTracer.cpp  RayTracer.h  RayTracerPCH.h  Utilities.h
Source/BVH/: BVHNode.cpp  BVHNode.h
Source/Camera/: Camera.cpp  Camera.h
Source/Collections/: HittableVector.cpp  HittableVector.h
Source/Files/: FileHandler.cpp  FileHandler.h
Source/Logging/: Log.cpp  Log.h
Source/Materials/: Dieletric.cpp  Dieletric.h  DiffuseLight.cpp  DiffuseLight.h  IMaterial.h  Isotropic.cpp  Isotropic.h  Lambertian.cpp  Lambertian.h  Metal.cpp  Metal.h
Source/Maths/: AABB.cpp  AABB.h  Interval.cpp  Interval.h  Ray.cpp  Ray.h  RayUtilities.h  Vector3.cpp  Vector3.h
Source/Noise/: Perlin.cpp  Perlin.h
Source/Objects/: ConstantMedium.cpp  ConstantMedium.h  HitResult.cpp  HitResult.h  Hittable.h  IHittable.h  Quad.cpp  Quad.h  RotateY.cpp  RotateY.h  Sphere.cpp  Sphere.h  Translate.cpp  Translate.h
Source/Renderers/: FileRenderer.cpp  FileRenderer.h  IRenderer.h  RendererBase.h  Terminal.cpp  Terminal.h
Source/Textures/: CheckerTexture.cpp  CheckerTexture.h  ITexture.h  ImageTexture.cpp  ImageTexture.h  NoiseTexture.cpp  NoiseTexture.h  SolidColorTexture.cpp  SolidColorTexture.h
